Create User model,controller and views

--- a/Clubhouse/appsettings.json
+++ b/Clubhouse/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ClubhouseContext": "Server=(localdb)\\mssqllocaldb;Database=Clubhouse.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
